src/plan/snapshots/asupersync__plan__analysis__tests__golden_display_cancel_safety_all_variants.snap
---
source: src/plan/analysis.rs
assertion_line: 3153
expression: rendered
---
Safe -> safe
MayOrphan -> may-orphan
Orphan -> orphan
Unknown -> unknown
