src/plan/snapshots/asupersync__plan__analysis__tests__golden_display_independence_result_all_variants.snap
---
source: src/plan/analysis.rs
assertion_line: 3208
expression: rendered
---
Independent -> independent
Dependent -> dependent
Uncertain -> uncertain
