src/plan/snapshots/asupersync__plan__analysis__tests__golden_display_obligation_flow_shapes.snap
---
source: src/plan/analysis.rs
assertion_line: 3196
expression: rendered
---
empty: reserves=[] [all-paths-ok]
leaf_with_obligation: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [all-paths-ok]
join(a,b): reserves=["obl:a", "obl:b"] must_resolve=["obl:a", "obl:b"] leak_on_cancel=["obl:a", "obl:b"] [all-paths-ok]
race(winner,loser): reserves=["obl:winner", "obl:loser"] must_resolve=["obl:winner", "obl:loser"] leak_on_cancel=["obl:winner", "obl:loser"] [LEAK-RISK]
