src/plan/snapshots/asupersync__plan__analysis__tests__golden_display_obligation_safety_all_variants.snap
---
source: src/plan/analysis.rs
assertion_line: 3140
expression: rendered
---
Clean -> clean
MayLeak -> may-leak
Leaked -> leaked
Unknown -> unknown
