src/plan/snapshots/asupersync__plan__analysis__tests__golden_full_analysis_complex_mixed_structure.snap
---
source: src/plan/analysis.rs
assertion_line: 3371
expression: "format!(\"{}\", analysis)"
---
Plan Analysis Report
====================

Summary: 2/6 safe, 4 obligation issue(s), 2 cancel issue(s)
Overall Safe: false

Safe Nodes (2):
  Node 1: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 2: clean (cost: alloc=1 cancel=1 obl=0 depth=1)

Obligation Issues (4):
  Node 0: clean → may-leak (flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [all-paths-ok])
  Node 3: clean → may-leak (flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [all-paths-ok])
  Node 4: may-leak → leaked (flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [LEAK-RISK])
  Node 5: may-leak → leaked (flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [LEAK-RISK])

Cancel Issues (2):
  Node 4: may-orphan
  Node 5: may-orphan

Detailed Node Analysis:
----------------------
Node 0:
  Safety: obligation=may-leak, cancel=safe, overall=false
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=1 depth=1
  Obligation Flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [all-paths-ok]
Node 1:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 2:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 3:
  Safety: obligation=may-leak, cancel=safe, overall=false
  Budget: polls=[2, 2] par=2
  Cost: alloc=3 cancel=2 obl=1 depth=2
  Obligation Flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [all-paths-ok]
Node 4:
  Safety: obligation=leaked, cancel=may-orphan, overall=false
  Budget: polls=[1, 1] par=3
  Cost: alloc=5 cancel=1 obl=1 depth=2
  Obligation Flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [LEAK-RISK]
Node 5:
  Safety: obligation=leaked, cancel=may-orphan, overall=false
  Budget: polls=[1, 1] deadline=[50ms, 50ms] par=3
  Cost: alloc=6 cancel=1 obl=1 depth=3
  Obligation Flow: reserves=["obl:permit"] must_resolve=["obl:permit"] leak_on_cancel=["obl:permit"] [LEAK-RISK]
