src/plan/snapshots/asupersync__plan__analysis__tests__golden_full_analysis_deep_nesting.snap
---
source: src/plan/analysis.rs
assertion_line: 3417
expression: "format!(\"{}\", analysis)"
---
Plan Analysis Report
====================

Summary: 8/8 safe, 0 obligation issue(s), 0 cancel issue(s)
Overall Safe: true

Safe Nodes (8):
  Node 0: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 1: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 2: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 3: clean (cost: alloc=1 cancel=1 obl=0 depth=1)
  Node 4: clean (cost: alloc=3 cancel=1 obl=0 depth=2)
  Node 5: clean (cost: alloc=3 cancel=1 obl=0 depth=2)
  Node 6: clean (cost: alloc=7 cancel=2 obl=0 depth=3)
  Node 7: clean (cost: alloc=8 cancel=2 obl=0 depth=4)

Detailed Node Analysis:
----------------------
Node 0:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 1:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 2:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 3:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1]
  Cost: alloc=1 cancel=1 obl=0 depth=1
  Obligation Flow: reserves=[] [all-paths-ok]
Node 4:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1] par=2
  Cost: alloc=3 cancel=1 obl=0 depth=2
  Obligation Flow: reserves=[] [all-paths-ok]
Node 5:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[1, 1] par=2
  Cost: alloc=3 cancel=1 obl=0 depth=2
  Obligation Flow: reserves=[] [all-paths-ok]
Node 6:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[2, 2] par=4
  Cost: alloc=7 cancel=2 obl=0 depth=3
  Obligation Flow: reserves=[] [all-paths-ok]
Node 7:
  Safety: obligation=clean, cancel=safe, overall=true
  Budget: polls=[2, 2] deadline=[200ms, 200ms] par=4
  Cost: alloc=8 cancel=2 obl=0 depth=4
  Obligation Flow: reserves=[] [all-paths-ok]
