src/plan/snapshots/asupersync__plan__analysis__tests__golden_full_analysis_empty_dag.snap
---
source: src/plan/analysis.rs
assertion_line: 3378
expression: "format!(\"{}\", analysis)"
---
Plan Analysis Report
====================

Summary: 0/0 safe, 0 obligation issue(s), 0 cancel issue(s)
Overall Safe: true

No nodes analyzed.
